[gd_scene load_steps=3 format=3 uid="uid://bdcfqb3a1n1l6"]

[ext_resource type="Script" uid="uid://rtf7f14jdaxn" path="res://main.gd" id="1_ig7tw"]
[ext_resource type="PackedScene" uid="uid://ce40mwsfhkhjk" path="res://overlapArea.tscn" id="2_0xm2m"]

[node name="Node2D" type="Node2D"]
script = ExtResource("1_ig7tw")

[node name="Camera2D" type="Camera2D" parent="."]
zoom = Vector2(2, 2)

[node name="OverlapArea0" parent="." instance=ExtResource("2_0xm2m")]
position = Vector2(-50, -50)

[node name="OverlapArea1" parent="." instance=ExtResource("2_0xm2m")]
position = Vector2(50, -50)
unique_id = 1

[node name="OverlapArea2" parent="." instance=ExtResource("2_0xm2m")]
position = Vector2(-50, 50)
unique_id = 2

[node name="OverlapArea3" parent="." instance=ExtResource("2_0xm2m")]
position = Vector2(50, 50)
unique_id = 3

[node name="OverlapArea5" parent="." instance=ExtResource("2_0xm2m")]
unique_id = 5
